@@ -33,6 +33,10 @@
 #include <gst/gstpad.h>
 #include <gst/gstregistry.h>
 
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
 /*
  * GST_MAGIC_BINARY_REGISTRY_STR:
  *
@@ -45,6 +49,16 @@
  * length of the header tag.
  */
 #define GST_MAGIC_BINARY_REGISTRY_LEN (4)
+
+/*
+ * GST_MAGIC_BINARY_VERSION_STRING:
+ *
+ * The current version of the binary registry format.
+ * This _must_ be updated whenever the registry format changes,
+ * we currently use the core version where this change happened.
+ */
+#define GST_MAGIC_BINARY_VERSION_STRING ("0.10.18")
+
 /*
  * GST_MAGIC_BINARY_VERSION_LEN:
  *
